force-app/main/default/objects/Analitica__c/Analitica__c.object-meta.xml
<CustomObject>
    <label>Analítica</label>
    <nameField>
        <displayFormat>A-{YY}/{MM}-{0000}</displayFormat>
        <label>Nombre de Analítica</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Analíticas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>