force-app/main/default/objects/Analitica__c/fields/Agrupacion_Importes_TOP_Accountas__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_Importes_TOP_Accountas__c</fullName>
    <formula>if( AND(RecordType.Name =&apos;Cierre&apos; , YEAR(Fecha__c )=2021),&apos;Cierre 2021&apos;,
if( AND(RecordType.Name =&apos;Cierre&apos; , YEAR(Fecha__c )=2022),&apos;Cierre 2022&apos;,
if(AND(OR(RecordType.Name =&apos;ForecastDeLinea&apos;,RecordType.Name =&apos;Backlog&apos;,RecordType.Name =&apos;Cierre&apos;) , YEAR(Fecha__c ) =2022),&apos;Forecast 2022&apos;,
if(AND(OR(RecordType.Name =&apos;ForecastDeLinea&apos;,RecordType.Name =&apos;Backlog&apos;,RecordType.Name =&apos;Cierre&apos;) , YEAR(Fecha__c ) =2023),&apos;Forecast 2023&apos;,
if( AND(RecordType.Name =&apos;Presupuesto&apos; , YEAR(Fecha__c )=2022),&apos;Presupuesto 2022&apos;,
if( AND(RecordType.Name =&apos;Presupuesto&apos; , YEAR(Fecha__c )=2023),&apos;Presupuesto 2023&apos;,

&apos;Otros&apos;))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupacion Importes TOP Accounts</label>
    <type>Text</type>
</CustomField>