force-app/main/default/objects/Analitica__c/fields/Agrupacion_Industria__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_Industria__c</fullName>
    <formula>if(AND(or( ISPICKVAL( Cuenta__r.Canal_Industria__c , &apos;60&apos;), ISPICKVAL( Cuenta__r.Canal_Industria__c ,&apos;61&apos;)),Agrupacion_Tipos_Proyecto__c=&apos;Servicios&apos; ),&apos;Industria Jacobo Servicios&apos;,

if(AND(ISPICKVAL( Cuenta__r.Canal_Industria__c , &apos;62&apos;),Agrupacion_Tipos_Proyecto__c=&apos;Servicios&apos; ),&apos;Industria Fede Servicios&apos;,

if(AND(or( ISPICKVAL( Cuenta__r.Canal_Industria__c , &apos;60&apos;), ISPICKVAL( Cuenta__r.Canal_Industria__c ,&apos;61&apos;)),Agrupacion_Tipos_Proyecto__c=&apos;Licencias&apos; ),&apos;Industria Jacobo Licencias&apos;,
if(AND(ISPICKVAL( Cuenta__r.Canal_Industria__c , &apos;62&apos;),Agrupacion_Tipos_Proyecto__c=&apos;Servicios&apos; ),&apos;Industria Fede Licencias&apos;,&apos;Nada&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupacion Industria</label>
    <type>Text</type>
</CustomField>