force-app/main/default/objects/Analitica__c/fields/Agrupacion_Tipos_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Agrupacion_Tipos_Proyecto__c</fullName>
    <formula>if( OR(ISPICKVAL( Tipo_Proyecto__c , &apos;ZLCWIP&apos;) , 
Linea_de_Proyecto__r.RecordType.Name =&apos;Licencias&apos;, 
Linea_de_Proyecto__r.RecordType.Name =&apos;Licencias - Renovación&apos;,
Linea_de_Proyecto__r.RecordType.Name =&apos;Licencias - Servicios&apos;),&apos;Licencias&apos;,&apos;Servicios&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agrupacion Tipos Proyecto</label>
    <type>Text</type>
</CustomField>