force-app/main/default/objects/Analitica__c/fields/C_digo_Empleado__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Empleado__c</fullName>
    <formula>Propietario__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Empleado</label>
    <type>Text</type>
</CustomField>