force-app/main/default/objects/Analitica__c/fields/C_digo_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>C_digo_Oportunidad__c</fullName>
    <formula>Oportunidad__r.Codigo_de_oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código Oportunidad</label>
    <type>Text</type>
</CustomField>