force-app/main/default/objects/Analitica__c/fields/Clan__c.field-meta.xml
<CustomField>
    <fullName>Clan__c</fullName>
    <label>Clan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Gerencias</valueSetName>
    </valueSet>
</CustomField>