force-app/main/default/objects/Analitica__c/fields/Cluster__c.field-meta.xml
<CustomField>
    <fullName>Cluster__c</fullName>
    <label>Clúster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Cluster</valueSetName>
    </valueSet>
</CustomField>