force-app/main/default/objects/Analitica__c/fields/Cod_Empleado__c.field-meta.xml
<CustomField>
    <fullName>Cod_Empleado__c</fullName>
    <formula>Propietario__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cod Empleado</label>
    <type>Text</type>
</CustomField>