force-app/main/default/objects/Analitica__c/fields/Codigo_SAP_BK__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_BK__c</fullName>
    <label>Codigo SAP BK</label>
    <length>20</length>
    <type>Text</type>
</CustomField>