force-app/main/default/objects/Analitica__c/fields/Codigo_SAP_cliente__c.field-meta.xml
<CustomField>
    <fullName>Codigo_SAP_cliente__c</fullName>
    <formula>if( Codigo_SAP_BK__c !=null,Codigo_SAP_BK__c ,Cuenta__r.ID_SAP__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código SAP cliente</label>
    <type>Text</type>
</CustomField>