force-app/main/default/objects/Analitica__c/fields/CodigoPEP__c.field-meta.xml
<CustomField>
    <fullName>CodigoPEP__c</fullName>
    <label>CódigoPEP</label>
    <type>TextArea</type>
</CustomField>