force-app/main/default/objects/Analitica__c/fields/Comercial_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Comercial_Mercado__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Comercial Mercado</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Anal_ticas</relationshipName>
    <type>Lookup</type>
</CustomField>