force-app/main/default/objects/Analitica__c/fields/Concatenado_Clan_Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Concatenado_Clan_Cuenta__c</fullName>
    <formula>IF( or(RecordType.Name==&apos;Cierre&apos;, RecordType.Name==&apos;Backlog&apos;), Cuenta__r.Name + &apos;--&apos; +TEXT( Clan__c),Cuenta__r.Name + &apos;--&apos; +TEXT( Linea_de_Proyecto__r.Gerencia__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concatenado Cuenta-Clan</label>
    <type>Text</type>
</CustomField>