force-app/main/default/objects/Analitica__c/fields/Consejo__c.field-meta.xml
<CustomField>
    <fullName>Consejo__c</fullName>
    <label>Consejo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Areas</valueSetName>
    </valueSet>
</CustomField>