force-app/main/default/objects/Analitica__c/fields/Coste_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Coste_Forecast__c</fullName>
    <formula>Linea_de_Proyecto__r.Coste_a_Elevar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Coste Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>