force-app/main/default/objects/Analitica__c/fields/Costes_reales__c.field-meta.xml
<CustomField>
    <fullName>Costes_reales__c</fullName>
    <label>Costes reales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>