force-app/main/default/objects/Analitica__c/fields/Costes_Reales_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Costes_Reales_Convertido__c</fullName>
    <formula>if( $User.Divisa__c = TEXT( CurrencyIsoCode ) ,  Costes_reales__c ,(Costes_reales__c / CURRENCYRATE( TEXT(CurrencyIsoCode ) )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Costes_Reales_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>