force-app/main/default/objects/Analitica__c/fields/Cuenta_Intercompany__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Intercompany__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Intercompany</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Analíticas (Cuenta Intercompany)</relationshipLabel>
    <relationshipName>Anal_ticas1</relationshipName>
    <type>Lookup</type>
</CustomField>