force-app/main/default/objects/Analitica__c/fields/Cuenta_Mercado__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Mercado__c</fullName>
    <formula>IF(INCLUDES( Cuenta__r.Sectores__c, &quot;A.Pub-Admin. Pública&quot;), &quot;A.Pub-Admin. Pública&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Banca-Banca&quot;), &quot;Banca-Banca&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Energía&quot;), &quot;Energía&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Environment&quot;), &quot;Environment&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Estruct.-Estructura&quot;), &quot;Estruct.-Estructura&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Industria-Industria&quot;), &quot;Industria-Industria&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Seguros-Seguros&quot;), &quot;Seguros-Seguros&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Telco-Media&quot;), &quot;Telco-Media&quot;, NULL) + BR() + 
IF(INCLUDES( Cuenta__r.Sectores__c, &quot;Telco-Telco&quot;), &quot;Telco-Telco&quot;, NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta:Mercado</label>
    <type>Text</type>
</CustomField>