force-app/main/default/objects/Analitica__c/fields/Cuenta_Padre__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Padre__c</fullName>
    <formula>if(  Cuenta__r.Parent.Id==&apos;&apos; , Cuenta__r.Name ,Cuenta__r.Parent.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cuenta Padre</label>
    <type>Text</type>
</CustomField>