force-app/main/default/objects/Analitica__c/fields/Cuenta_Padre_lookup__c.field-meta.xml
<CustomField>
    <fullName>Cuenta_Padre_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta Padre</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Analíticas (Cuenta Padre)</relationshipLabel>
    <relationshipName>Anal_ticas2</relationshipName>
    <type>Lookup</type>
</CustomField>