force-app/main/default/objects/Analitica__c/fields/CuentaID__c.field-meta.xml
<CustomField>
    <fullName>CuentaID__c</fullName>
    <formula>Cuenta__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CuentaID</label>
    <type>Text</type>
</CustomField>