force-app/main/default/objects/Analitica__c/fields/Duplicatefield__c.field-meta.xml
<CustomField>
    <fullName>Duplicatefield__c</fullName>
    <formula>Linea_de_Proyecto__c + text( Importe_Forecast__c) + text(Fecha__c) + Sede_Venta__c + Cuenta__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duplicatefield</label>
    <type>Text</type>
</CustomField>