force-app/main/default/objects/Analitica__c/fields/Elemento_PEP__c.field-meta.xml
<CustomField>
    <fullName>Elemento_PEP__c</fullName>
    <label>Elemento_PEP</label>
    <length>60</length>
    <type>Text</type>
</CustomField>