force-app/main/default/objects/Analitica__c/fields/EsDeNateevo__c.field-meta.xml
<CustomField>
    <fullName>EsDeNateevo__c</fullName>
    <formula>IF( OR( Oportunidad__r.EsDeNateevo__c =true, Oportunidad__r.Sede_Venta__r.Name =&apos;NATEEVO DIGITAL SLU&apos;, Sede_Venta__r.Name =&apos;NATEEVO DIGITAL SLU&apos;,Sede_Venta__r.Name =&apos;T4S Advance Solutions&apos;) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsDeNateevo</label>
    <type>Checkbox</type>
</CustomField>