force-app/main/default/objects/Analitica__c/fields/EsdeSerbatic__c.field-meta.xml
<CustomField>
    <fullName>EsdeSerbatic__c</fullName>
    <formula>IF( OR( Oportunidad__r.EsdeSerbatic__c =true, Oportunidad__r.Sede_Venta__r.Name =&apos;SERBATIC SISTEMAS TECNOLÓGICOS, S.A&apos;,  Sede_Venta__r.Name =&apos;SERBATIC SISTEMAS TECNOLÓGICOS, S.A&apos;) ,true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsdeSerbatic</label>
    <type>Checkbox</type>
</CustomField>