force-app/main/default/objects/Analitica__c/fields/EsIntercompany__c.field-meta.xml
<CustomField>
    <fullName>EsIntercompany__c</fullName>
    <formula>IF(
    AND(
        Sede_Venta__r.GEO__c = &apos;SPAIN&apos;,
        Cuenta__r.GEO__c != &apos;SPAIN&apos;
    ),
    false,
    IF(
        AND(
            OR(
                EsdeSerbatic__c = True,
                EsDeNateevo__c = True,
                Intercompanyt4scomu__c = true,
                CONTAINS(Sede_Venta__r.Name, &apos;VASS&apos;)
            ),
            OR(
                CONTAINS(Cuenta__r.Name, &apos;VASS&apos;),
                CONTAINS(Cuenta__r.Name, &apos;SERBATIC&apos;),
                CONTAINS(Cuenta__r.Name, &apos;NATEEVO&apos;),
                CONTAINS(Cuenta__r.Name, &apos;Movetia&apos;),
                CONTAINS(Cuenta__r.Name, &apos;VDSHOP REDCOM SL&apos;),
                CONTAINS(Cuenta__r.Name, &apos;CRI GREECE&apos;),
                CONTAINS(Cuenta__r.Name, &apos;ECENTA&apos;),
                CONTAINS(Cuenta__r.Name, &apos;T4S&apos;),
                CONTAINS(Cuenta__r.Name, &apos;Ecenta&apos;),
                CONTAINS(Cuenta__r.Name, &apos;VASS APJ&apos;),
                CONTAINS(Cuenta__r.Name, &apos;Intelygenz Spain&apos;)
            )
        ),
        true,
        false
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsIntercompany</label>
    <type>Checkbox</type>
</CustomField>