force-app/main/default/objects/Analitica__c/fields/EsLDC__c.field-meta.xml
<CustomField>
    <fullName>EsLDC__c</fullName>
    <formula>IF(OR($User.ProfileId =&apos;00e0N000000i4Kb&apos; ,$User.ProfileId =&apos;00e0N000000eDnD&apos; ) , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EsLDC</label>
    <type>Checkbox</type>
</CustomField>