force-app/main/default/objects/Analitica__c/fields/Fecha_Cierre_Oppty__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Cierre_Oppty__c</fullName>
    <formula>Oportunidad__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Cierre Oppty</label>
    <type>Date</type>
</CustomField>