force-app/main/default/objects/Analitica__c/fields/Fecha_Creacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Creacion__c</fullName>
    <formula>If( AND(RecordType.Name =&apos;Backlog&apos;, CreatedBy.Username =&apos;vassforce.integrator@vass.es&apos;),(TEXT(DAY(DATEVALUE(CreatedDate) ))+&quot;/&quot; +TEXT(MONTH(DATEVALUE(CreatedDate)))+&quot;/&quot; +TEXT(YEAR( DATEVALUE(CreatedDate)))),&apos;0&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Creacion</label>
    <type>Text</type>
</CustomField>