force-app/main/default/objects/Analitica__c/fields/Fecha_de_cierre__c.field-meta.xml
<CustomField>
    <fullName>Fecha_de_cierre__c</fullName>
    <formula>Fecha__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Ingreso</label>
    <type>Date</type>
</CustomField>