force-app/main/default/objects/Analitica__c/fields/Fecha_Fin_Linea_Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_Linea_Proyecto__c</fullName>
    <formula>Linea_de_Proyecto__r.Fecha_Fin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Fin Linea Proyecto</label>
    <type>Date</type>
</CustomField>