force-app/main/default/objects/Analitica__c/fields/Fecha_Inicio_Linea__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicio_Linea__c</fullName>
    <formula>Linea_de_Proyecto__r.Fecha_Inicio__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fecha Inicio Línea</label>
    <type>Date</type>
</CustomField>