force-app/main/default/objects/Analitica__c/fields/Filial_Acc_Manager__c.field-meta.xml
<CustomField>
    <fullName>Filial_Acc_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Filial Acc Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Anal_ticas1</relationshipName>
    <type>Lookup</type>
</CustomField>