force-app/main/default/objects/Analitica__c/fields/Filtro_Sede_Venta__c.field-meta.xml
<CustomField>
    <fullName>Filtro_Sede_Venta__c</fullName>
    <formula>if(EsIntercompany__c ==FALSE,( Sede_Venta_Filter__c +&apos; Sin intercompany&apos; ),Sede_Venta_Filter__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Filtro Sede Venta</label>
    <type>Text</type>
</CustomField>