force-app/main/default/objects/Analitica__c/fields/GeneradoIntercompany__c.field-meta.xml
<CustomField>
    <fullName>GeneradoIntercompany__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GeneradoIntercompany</label>
    <type>Checkbox</type>
</CustomField>