force-app/main/default/objects/Analitica__c/fields/GSO_Region__c.field-meta.xml
<CustomField>
    <fullName>GSO_Region__c</fullName>
    <formula>Sede_Venta__r.GSO_Region__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSO Region</label>
    <type>Text</type>
</CustomField>