force-app/main/default/objects/Analitica__c/fields/id_de_la_cuenta_Padre__c.field-meta.xml
<CustomField>
    <fullName>id_de_la_cuenta_Padre__c</fullName>
    <formula>Cuenta_Padre_lookup__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>id de la cuenta Padre</label>
    <type>Text</type>
</CustomField>