force-app/main/default/objects/Analitica__c/fields/Idpresupuesto__c.field-meta.xml
<CustomField>
    <fullName>Idpresupuesto__c</fullName>
    <label>Idpresupuesto</label>
    <length>8</length>
    <type>Text</type>
</CustomField>