force-app/main/default/objects/Analitica__c/fields/Importe_2021__c.field-meta.xml
<CustomField>
    <fullName>Importe_2021__c</fullName>
    <formula>if( YEAR(Fecha__c )=2021,Importe_LP__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe 2021</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>