force-app/main/default/objects/Analitica__c/fields/Importe_2022__c.field-meta.xml
<CustomField>
    <fullName>Importe_2022__c</fullName>
    <formula>if( YEAR(Fecha__c )=2022,Importe_LP__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe 2022</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>