force-app/main/default/objects/Analitica__c/fields/Importe_Backlog_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Importe_Backlog_Convertido__c</fullName>
    <formula>if( $User.Divisa__c = TEXT( CurrencyIsoCode ), Importe__c ,
if( TEXT(CurrencyIsoCode )=&apos;GBP&apos; ,(Importe__c /0.8478),
if( TEXT(CurrencyIsoCode )=&apos;MXN&apos; ,(Importe__c /25.15),
if( TEXT(CurrencyIsoCode )=&apos;COP&apos; ,(Importe__c /4400.00), 
if( TEXT(CurrencyIsoCode )=&apos;CLP&apos; ,(Importe__c   /919.00), 
if( TEXT(CurrencyIsoCode )=&apos;PEN&apos; ,(Importe__c /4.20), 

(Importe__c /1


)))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe_Backlog_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>