force-app/main/default/objects/Analitica__c/fields/Importe_Backlog_Temporal__c.field-meta.xml
<CustomField>
    <fullName>Importe_Backlog_Temporal__c</fullName>
    <formula>if( RecordType.Name==&apos;BacklogTemporal&apos;, Importe__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Backlog Temporal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>