force-app/main/default/objects/Analitica__c/fields/Importe_Backlog_viejo__c.field-meta.xml
<CustomField>
    <fullName>Importe_Backlog_viejo__c</fullName>
    <formula>if(RecordType.Name==&apos;Backlog&apos;,Importe__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Backlog viejo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>