force-app/main/default/objects/Analitica__c/fields/Importe_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Importe_Convertido__c</fullName>
    <formula>IF( RecordType.Name==&apos;Cierre&apos;,  Ingresos_Reales_Convertidos__c ,
IF( RecordType.Name==&apos;ForecastDeLinea&apos; || RecordType.Name==&apos;ForecastDeOportunidades&apos;  ,  Importe_Forecast_Convertido__c ,
IF( RecordType.Name==&apos;Backlog&apos; ,  Importe_Backlog_Convertido__c ,0

)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>