force-app/main/default/objects/Analitica__c/fields/Importe_Forecast_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Importe_Forecast_Convertido__c</fullName>
    <formula>if( $User.Divisa__c = TEXT( CurrencyIsoCode ) ,  Importe_Forecast__c ,(Importe_Forecast__c / CURRENCYRATE( TEXT(CurrencyIsoCode ) )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe_Forecast_Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>