force-app/main/default/objects/Analitica__c/fields/Importe_LP__c.field-meta.xml
<CustomField>
    <fullName>Importe_LP__c</fullName>
    <formula>IF( RecordType.Name==&apos;Cierre&apos;, Ingresos_Reales__c,
IF( RecordType.Name==&apos;ForecastDeLinea&apos; , Importe_Forecast__c ,
IF( RecordType.Name==&apos;Cierre&apos;, Ingresos_Reales__c  ,
IF( RecordType.Name==&apos;ForecastDeOportunidades&apos; , Importe_Forecast__c ,
IF(OR( RecordType.Name==&apos;Backlog&apos;,RecordType.Name==&apos;ForecastImporteTotal_Presupuesto&apos; ), Importe__c ,

Importe__c 

)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>