force-app/main/default/objects/Analitica__c/fields/Importe_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Importe_Pipeline__c</fullName>
    <formula>if( RecordType.Name ==&apos;Pipeline&apos;,Importe__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Pipeline</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>