force-app/main/default/objects/Analitica__c/fields/Importe_x_Prob__c.field-meta.xml
<CustomField>
    <fullName>Importe_x_Prob__c</fullName>
    <formula>IF( AND(Fecha_de_cierre__c &lt; DATE(YEAR(TODAY()) , MONTH(TODAY()) , 01),ISPICKVAL(Tipo__c,&apos;Forecast&apos;)) , 0 , 
IF(NOT(ISBLANK(Linea_de_Proyecto__c)),Linea_de_Proyecto__r.Importe_prorrateado_x_prob__c, 
IF(NOT(ISBLANK(Oportunidad__c)),Oportunidad__r.Importe_prorrateado__c * Probabilidad__c, 
IF(ISPICKVAL(Tipo__c,&apos;Ingresos vs costes&apos;),Ingresos_Reales__c,Importe__c))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe x Prob</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>