force-app/main/default/objects/Analitica__c/fields/Importes_Top_Account_Convertido__c.field-meta.xml
<CustomField>
    <fullName>Importes_Top_Account_Convertido__c</fullName>
    <formula>if( RecordType.Name =&apos;Backlog&apos;,Importe__c  ,  

if(RecordType.Name =&apos;Cierre&apos; ,Ingresos_Reales__c,
 
if(RecordType.Name =&apos;ForecastDeLinea&apos;,Importe_Forecast__c, 

Presupuesto__c )))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importes Top Account Convertido</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>