force-app/main/default/objects/Analitica__c/fields/Intercompanyt4scomu__c.field-meta.xml
<CustomField>
    <fullName>Intercompanyt4scomu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intercompanyt4scomu</label>
    <type>Checkbox</type>
</CustomField>