force-app/main/default/objects/Analitica__c/fields/IsFramework__c.field-meta.xml
<CustomField>
    <fullName>IsFramework__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsFramework</label>
    <type>Checkbox</type>
</CustomField>